--- a/requirements.txt
+++ b/requirements.txt
@@ -16,12 +16,12 @@ click-didyoumean==0.3.1
 click-plugins==1.1.1
 click-repl==0.3.0
 colorama==0.4.6
-Flask==3.0.3  
+Flask==3.0.3
 Flask-Bcrypt==1.0.1
 Flask-JWT-Extended==4.6.0
 Flask-Migrate==4.0.7
 flask-restx==1.3.0
-Flask-SQLAlchemy==3.1.1  
+Flask-SQLAlchemy==3.1.1
 flatbuffers==24.3.25
 gast==0.6.0
 google-pasta==0.2.0
@@ -56,11 +56,11 @@ psycopg2-binary==2.9.9
 Pygments==2.18.0
 PyJWT==2.9.0
 python-dateutil==2.9.0.post0
-python-dotenv==1.0.1  
+python-dotenv==1.0.1
 pytz==2024.2
 redis==5.1.1
 referencing==0.35.1
-requests==2.32.3  
+requests==2.32.3
 rich==13.9.2
 rpds-py==0.20.0
 scikit-learn==1.5.2
@@ -71,18 +71,5 @@ SQLAlchemy==2.0.35
 tensorboard==2.17.1
 tensorboard-data-server==0.7.2
 tensorflow==2.17.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.5.0
-threadpoolctl==3.5.0
-typing_extensions==4.12.2
-tzdata==2024.2
-urllib3==2.2.3
-vine==5.1.0
-wcwidth==0.2.13
-Werkzeug==3.0.4  
-wrapt==1.16.0
-Flask-Mail==0.9.1
-Flask-Login==0.5.0
-Flask-WTF==1.1.1
-Flask-Limiter==1.4
-openai>=1.0.0
+gunicorn
+openai
